bk_ida/gobmkida/c2/hash_init
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/hash_init/src/engine/hash.c:561:41: error: use of undeclared identifier 'current_influence'
*( struct influence_data **)( ( char *)&current_influence + v0 * 8) = ( struct influence_data *)( v5 | ( v6 << 32)); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/hash_init/src/obj/1/hash.o] Error 1
